# RaspClock

./: .clang-format  .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  TODO.md
src/: .travis.yml  main.cpp
src/core/: app_controller.cpp  app_controller.h  app_info.cpp  app_info.h  app_updater.cpp  app_updater.h  application_updater.cpp  application_updater.h  config.cpp  config.h  logs_recorder.cpp  logs_recorder.h  main_timer.cpp  main_timer.h  network.cpp  network.h
src/data/: time_provider.cpp  time_provider.h  time_zone_provider.cpp  time_zone_provider.h
src/ui/: display.cpp  display.h  display.ui  logs.cpp  logs.h  logs.ui  main_window.cpp  main_window.h  main_window.ui  settings.cpp  settings.h  settings.ui  square_widget_event_filter.cpp  square_widget_event_filter.h  widget_ratio_filter.cpp
src/ui/util/: text_helpers.cpp  text_helpers.h  widget_ratio_filter.cpp  widget_ratio_filter.h
